# polars-prover

./: README.md  pyproject.toml
.cursor/rules/: coding_standards.mdc
.trunk/: trunk.yaml
cairo/: README.md  pyproject.toml
cairo/src/prover/: main.py  memory.py  vm_import.py
cairo/src/prover/adapter/: instruction.py  memory.py  opcodes.py  operands.py  prover_input.py  trace.py  vm_import.py
cairo/src/prover/components/: add_opcode_small.py
